--- a/templates/error.html
+++ b/templates/error.html
@@ -1,4 +1,4 @@
-<h2>{{ response.error }}</h2>
+<h2>{{ error }}</h2>
 
 <p>(Your polling unit number is a series of numbers separated by
 colons, e.g. &ldquo;1:1:1&rdquo;)</p>
