--- a/templates/form.html
+++ b/templates/form.html
@@ -1,4 +1,4 @@
-<form action="/lookup" method="POST">
+<form action="{{ url_for('lookup') }}" method="POST">
   <input id="pu-number" name="pu-number"></input>
   <input type="submit">
 </form>
